--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,11 @@
 <body>
 <section class="headerwrap ">
     <header>
-		<div  class=" header">
+		<div class=" header">
+
  			<div class="top">
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
-					<!--登录后跳转-->
-
                         {% if request.user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
@@ -38,23 +37,22 @@
 	                                </dd>
                                 </dl>
                                 <div class="btn">
-	                                <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
+	                                <a class="personcenter fl" href="#">进入个人中心</a>
 	                                <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
-                        <a href="{% url 'users:mymessage' %}">
-                            <div class="msg-num"> <span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                        <a href="#">
+                            <div class="msg-num"> <span id="MsgNum">{#{ request.user.unread_nums }#}</span></div>
                         </a>
                     {% else %}
                         <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
                     {% endif %}
+				</div>  <!--wp end-->
+			</div><!--class top end-->
 
-
-				</div>
-			</div>
-
+            <!--全站搜索-->
             <div class="middle">
                 <div class="wp">
                     <a href="/"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
@@ -73,33 +71,34 @@
                         <img class="search_btn fr" id="jsSearchBtn" src="{% static 'images/search_btn.png' %}"/>
                     </div>
                 </div>
-            </div>
-            
-            
+            </div> <!--全站搜索-->
+
+            <!--内容导航-->
 			<nav>
 				<div class="nav">
 					<div class="wp">
 						<ul>
 							<li {% if request.path == '/' %}class="active" {% endif %}><a href="{% url 'index' %}">首页</a></li>
 							<li {% if request.path|slice:'7' == '/course' %}class="active"{% endif %}>
-								<a href="{% url 'course:course_list' %}">
+								<a href="#">
 									公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
 								</a>
 							</li>
 							<li {% if request.path|slice:'12' == '/org/teacher' %}class="active"{% endif %}>
-								<a href="{% url 'org:teacher_list' %}">授课教师</a>
+								<a href="#">授课教师</a>
 							</li>
 							<li {% if request.path|slice:'9' == '/org/list' %}class="active" {% endif %}>
-                                <a href="{% url 'org:org_list' %}">授课机构</a>
+                                <a href="#">授课机构</a>
                             </li>
 						</ul>
 					</div>
 				</div>
-			</nav>
-            
-			</div>
+			</nav><!--内容导航-->
+
+        </div> <!--class header end-->
     </header>
 </section>
+
 <!--crumbs start-->
 {% block custom_bread %}
 <section>
@@ -110,8 +109,12 @@
 	</div>
 </section>
 {% endblock %}
+
+<!--content -->
 {% block content %}
 {% endblock %}
+
+<!--footer-->
 <footer>
 		<div class="footer">
 			<div class="wp">
@@ -128,19 +131,11 @@
                 <span class="fr">copyright ? 2016 ICP备案证书号：蜀ICP备xxxxx号-1</span>
 			</div>
 		</div>
-	</footer>
+</footer>
 
-<section>
-    <ul class="sidebar">
-        <li class="qq">
-            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2023525077&site=qq&menu=yes"></a>
-        </li>
-        <li class="totop"></li>
-    </ul>
-</section>
 <script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
-<script type="text/javascript" src="{% static 'js/plugins/laydate/laydate.js' %}"></script>
+<script src="{% static 'js/plugins/laydate/laydate.js' %}" type="text/javascript" ></script>
 <script src="{% static 'js/plugins/layer/layer.js' %}"></script>
 <script src="{% static 'js/plugins/queryCity/js/public.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
