--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                             {% for banner in all_banners %}
                             <li>
                                     <a href="{{ banner.url }}">
-                                        <img width="1200" height="478" src="{{ MEDIA_URL }}{{ banner.image }}" />
+                                        <img width="1200" height="478" src="media/{{ banner.image }}" />
                                     </a>
                                 </li>
                             {% endfor %}
@@ -27,13 +27,11 @@
 					<div class="unslider-arrow prev"></div>
 					<div class="unslider-arrow next"></div>
 				</div>
+            </div><!--banner end-->
+    </div><!--banner end-->
 
-				</div>
-
-
-			</div>
-<!--banner end-->
 <!--feature start-->
+<!--
 	<section>
 		<div class="wp">
 			<ul class="feature">
@@ -56,8 +54,11 @@
 			</ul>
 		</div>
 	</section>
+-->
 <!--feature end-->
+
 <!--module1 start-->
+<!--
 	<section>
 		<div class="module">
 			<div class="wp">
@@ -66,42 +67,42 @@
 					<div class="module1_1 left">
 						<img width="228" height="614" src="/static/images/module1_1.jpg"/>
 						<p class="fisrt_word">名师授课<br/>专业权威</p>
-						<a class="more" href="{% url 'course:course_list' %}">查看更多课程 ></a>
+						<a class="more" href="{#% url 'course:course_list' %#}">查看更多课程 ></a>
 					</div>
 					<div class="right group_list">
 						<div class="module1_2 box">
 							<div class="imgslide2">
 								<ul class="imgs">
-                                    {% for banner_course in banner_courses %}
+                                    {#% for banner_course in banner_courses %#}
                                     <li>
-                                        <a href="{% url 'course:course_detail' banner_course.id %}">
+                                        <a href="{#% url 'course:course_detail' banner_course.id %#}">
                                             <img width="470" height="300" src="{{ MEDIA_URL }}{{ banner_course.image }}" />
                                         </a>
                                     </li>
-                                    {% endfor %}
+                                    {#% endfor %#}
 								</ul>
 							</div>
 							<div class="unslider-arrow2 prev"></div>
 							<div class="unslider-arrow2 next"></div>
 						</div>
-                            {% for course in courses %}
-                            <div class="module1_{{ forloop.counter|add:2 }} box">
-                                <a href="{% url 'course:course_detail' course.id %}">
-                                    <img width="233" height="190" src="{{ MEDIA_URL }}{{ course.image }}"/>
+                            {#% for course in courses %#}
+                            <div class="module1_{#{ forloop.counter|add:2 }#} box">
+                                <a href="{#% url 'course:course_detail' course.id %#}">
+                                    <img width="233" height="190" src="{#{ MEDIA_URL }#}{#{ course.image }#}"/>
                                 </a>
                                 <div class="des">
-                                    <a href="{% url 'course:course_detail' course.id %}">
-                                        <h2 title="{{ course.name }}">{{ course.name }}</h2>
+                                    <a href="{#% url 'course:course_detail' course.id %#}">
+                                        <h2 title="{#{ course.name }#}">{#{ course.name }#}</h2>
                                     </a>
-                                    <span class="fl">难度：<i class="key">{{ course.get_degree_display }}</i></span>
-                                    <span class="fr">学习人数：{{ course.students }}</span>
+                                    <span class="fl">难度：<i class="key">{# { course.get_degree_display }#}</i></span>
+                                    <span class="fr">学习人数：{#{ course.students }#}</span>
                                 </div>
                                 <div class="bottom">
-                                    <span class="fl" title="{{ course.course_org.name }}">{{ course.course_org.name }}</span>
-                                    <span class="star fr">{{ course.fav_nums }}</span>
+                                    <span class="fl" title="{#{ course.course_org.name }#}">{#{ course.course_org.name }#}</span>
+                                    <span class="star fr">{#{ course.fav_nums }#}</span>
                                 </div>
                             </div>
-                            {% endfor %}
+                            {#% endfor %#}
 					</div>
 				</div>
 			</div>
@@ -115,31 +116,32 @@
 					<div class="module3_1 left">
 						<img width="228" height="463" src="/static/images/module3_1.jpg"/>
 						<p class="fisrt_word">名校来袭<br/>权威认证</p>
-						<a class="more" href="{% url 'org:org_list' %}">查看更多机构 ></a>
+						<a class="more" href="{#% url 'org:org_list' %#}">查看更多机构 ></a>
 					</div>
 					<div class="right">
 						<ul>
-                            {% for org in course_orgs %}
-                                <li class="{% if forloop.counter|divisibleby:5 %}five{% endif %}">
-                                    <a href="{% url 'org:org_home' org.id %}">
+                            {#% for org in course_orgs %#}
+                                <li class="{#% if forloop.counter|divisibleby:5 %#}five{#% endif %#}">
+                                    <a href="{#% url 'org:org_home' org.id %#}">
                                         <div class="company">
-                                            <img width="184" height="100" src="{{ MEDIA_URL }}{{ org.image }}"/>
+                                            <img width="184" height="100" src="{#{ MEDIA_URL }#}{#{ org.image }#}"/>
                                             <div class="score">
                                                 <div class="circle">
-                                                    <h2>{{ org.tag }}</h2>
+                                                    <h2>{#{ org.tag }#}</h2>
                                                 </div>
                                             </div>
                                         </div>
-                                        <p><span class="key" title="{{ org.name }}">{{ org.name }}</span></p>
+                                        <p><span class="key" title="{#{ org.name }#}">{#{ org.name }#}</span></p>
                                     </a>
                                 </li>
-                            {% endfor %}
+                            {#% endfor %#}
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+-->
 {% endblock %}
 
 
