--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                             {% for banner in all_banners %}
                             <li>
                                     <a href="{{ banner.url }}">
-                                        <img width="1200" height="478" src="media/{{ banner.image }}" />
+                                        <img width="1200" height="478" src="{{ MEDIA_URL }}{{ banner.image }}" />
                                     </a>
                                 </li>
                             {% endfor %}
@@ -31,7 +31,7 @@
     </div><!--banner end-->
 
 <!--feature start-->
-<!--
+
 	<section>
 		<div class="wp">
 			<ul class="feature">
@@ -54,7 +54,7 @@
 			</ul>
 		</div>
 	</section>
--->
+-
 <!--feature end-->
 
 <!--module1 start-->
@@ -108,6 +108,7 @@
 			</div>
 		</div>
 	</section>
+	-->
 	<section>
 		<div class="module greybg">
 			<div class="wp">
@@ -116,32 +117,32 @@
 					<div class="module3_1 left">
 						<img width="228" height="463" src="/static/images/module3_1.jpg"/>
 						<p class="fisrt_word">名校来袭<br/>权威认证</p>
-						<a class="more" href="{#% url 'org:org_list' %#}">查看更多机构 ></a>
+						<a class="more" href="{% url 'org:org_list' %}">查看更多机构 ></a>
 					</div>
 					<div class="right">
 						<ul>
-                            {#% for org in course_orgs %#}
-                                <li class="{#% if forloop.counter|divisibleby:5 %#}five{#% endif %#}">
-                                    <a href="{#% url 'org:org_home' org.id %#}">
+                            {% for org in course_orgs %}
+                                <li class="{% if forloop.counter|divisibleby:5 %}five{% endif %}">
+                                    <a href="{% url 'org:org_home' org.id %}">
                                         <div class="company">
-                                            <img width="184" height="100" src="{#{ MEDIA_URL }#}{#{ org.image }#}"/>
+                                            <img width="184" height="100" src="{{ MEDIA_URL }}{{ org.image }}"/>
                                             <div class="score">
                                                 <div class="circle">
-                                                    <h2>{#{ org.tag }#}</h2>
+                                                    <h2>{{ org.tag }}</h2>
                                                 </div>
                                             </div>
                                         </div>
-                                        <p><span class="key" title="{#{ org.name }#}">{#{ org.name }#}</span></p>
+                                        <p><span class="key" title="{{ org.name }}">{{ org.name }}</span></p>
                                     </a>
                                 </li>
-                            {#% endfor %#}
+                            {% endfor %}
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
--->
+
 {% endblock %}
 
 
