--- a/templates/org/org-detail-homepage.html
+++ b/templates/org/org-detail-homepage.html
@@ -36,7 +36,7 @@
     <div class="diarys">
         <div class="module5 share company-diary-box" style="padding:10px 0;">
             <div class="left">
-                <img class="pic" src="media/{{ teacher.image }}"/>
+                <img class="pic" src="{{MEDIA_URL}}{{ teacher.image }}"/>
                 <p>昵称：{{ teacher.name }}</p>
             </div>
             <div class="right">
