--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 	                                </dd>
                                 </dl>
                                 <div class="btn">
-	                                <a class="personcenter fl" href="#">进入个人中心</a>
+	                                <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
 	                                <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
@@ -84,10 +84,10 @@
 									公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
 								</a>
 							</li>
-							<li {% if request.path|slice:'12' == '/teacher/teacher' %}class="active"{% endif %}>
+							<li {% if request.path|slice:'8' == '/teacher' %}class="active"{% endif %}>
 								<a href="{% url 'teacher:teacher_list' %}">授课教师</a>
 							</li>
-							<li {% if request.path|slice:'9' == '/org/list' %}class="active" {% endif %}>
+							<li {% if request.path|slice:'4' == '/org' %}class="active" {% endif %}>
                                 <a href="{% url 'org:org_list' %}">授课机构</a>
                             </li>
 						</ul>
