--- a/templates/user/usercenter-fav-teacher.html
+++ b/templates/user/usercenter-fav-teacher.html
@@ -33,13 +33,13 @@
                     <div class=" butler_list butler-fav-box">
                         <dl class="des users">
                             <dt>
-                                <a href="{% url 'org:teacher_detail' teacher.id %}">
+                                <a href="{% url 'teacher:teacher_detail' teacher.id %}">
                                     <img width="100" height="100" src="{{ MEDIA_URL }}{{ teacher.image }}"/>
                                 </a>
                             </dt>
                             <dd>
                                 <h1>
-                                    <a href="{% url 'org:teacher_detail' teacher.id %}">
+                                    <a href="{% url 'teacher:teacher_detail' teacher.id %}">
                                         {{ teacher.name }}<span class="key">认证教师</span>
                                     </a>
                                 </h1>
